# scraping-helper

./: .gitignore  Pipfile  pyproject.toml
.github/workflows/: github-actions.yml
scraper/: scraper.py
scraping_helper/: __init__.py  auto_driver.py  checkpoint_recorder.py  slack_notificater.py  task.py  task_runner.py
test/integrate_tests/: test_run.py
test/unit_tests/: test_checkpoint_recorder.py  test_task.py  test_task_runner.py
