[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scraping-helper"
description = "Help scraping"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.ruff]
select = ["ALL"]
ignore = ["T20", "D", "TC", "N", "DTZ"]

[tool.ruff.pydocstyle]
convention = "google"